// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiveWriter .commentLight() prints dimmed comment 1`] = `
Array [
  Array [
    "foo",
  ],
]
`;

exports[`LiveWriter .failed() colors "not ok" red 1`] = `"{red not ok}"`;

exports[`LiveWriter .keyValue() prints key-value pair 1`] = `
Array [
  Array [
    "foo:         bar",
  ],
]
`;

exports[`LiveWriter .passed() colors "ok" green 1`] = `"{green ok}"`;

exports[`LiveWriter .pending() colors "ok" yellow 1`] = `"{yellow ok}"`;

exports[`LiveWriter .start() prints start message 1`] = `
Array [
  Array [
    "",
  ],
  Array [
    "",
  ],
  Array [
    "# Starting...",
  ],
]
`;

exports[`LiveWriter .stats() when all tests pass shows only passed and total tests 1`] = `
Array [
  "foo",
  "1 passed, 1 total",
]
`;

exports[`LiveWriter .stats() when some tests are skipped and no tests fail shows only passed, skipped and total tests 1`] = `
Array [
  "foo",
  "1 skipped, 1 passed, 2 total",
]
`;

exports[`LiveWriter .stats() when some tests are skipped shows all items 1`] = `
Array [
  "foo",
  "1 failed, 1 skipped, 1 passed, 3 total",
]
`;

exports[`LiveWriter .stats() when some tests fail shows only passed, failed and total tests 1`] = `
Array [
  "foo",
  "1 failed, 1 passed, 2 total",
]
`;

exports[`LiveWriter .stats() when zero tests shows only total zero 1`] = `
Array [
  "foo",
  "0 total",
]
`;

exports[`LiveWriter .suite() prints test suite result 1`] = `" FAIL  bar/kappa.js"`;
